Fixes RT #26026; correctly align login buttons for Opera and IE6.
git-svn-id: svn+ssh://svn.wikia-code.com/svn/wikia/trunk@14950 e846bd91-c042-42a7-a218-4b65e2c1904d

--- a/skins/monaco/css/header.css
+++ b/skins/monaco/css/header.css
@@ -111,6 +111,10 @@ a.greyButton big {
 	line-height: 32px;
 	margin-right: 8px;
 }
+.loggedout #userData li {
+	float: none;
+	display: inline;
+}
 #userData a, #wikiaBranding a {
 	color: #000;
 }
